Cleanup Connect Module (1/n)