@@ -26,10 +26,10 @@ import org.apache.kafka.common.metrics.stats.Max;
 import org.apache.kafka.common.metrics.stats.Min;
 import org.apache.kafka.common.metrics.stats.Value;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
@@ -38,7 +38,7 @@ class MirrorCheckpointMetrics implements AutoCloseable {
 
     private static final String CHECKPOINT_CONNECTOR_GROUP = MirrorCheckpointConnector.class.getSimpleName();
 
-    private static final Set<String> GROUP_TAGS = new HashSet<>(Arrays.asList("source", "target", "group", "topic", "partition"));
+    private static final Set<String> GROUP_TAGS = new HashSet<>(List.of("source", "target", "group", "topic", "partition"));
 
     private static final MetricNameTemplate CHECKPOINT_LATENCY = new MetricNameTemplate(
             "checkpoint-latency-ms", CHECKPOINT_CONNECTOR_GROUP,
