@@ -28,8 +28,6 @@ import org.apache.kafka.common.security.auth.SecurityProtocol;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
@@ -152,11 +150,11 @@ public class MirrorMakerConfigTest {
         MirrorSourceConfig sourceConfig = new MirrorSourceConfig(connectorProps);
         assertEquals(100, (int) sourceConfig.getInt("tasks.max"),
             "Connector properties like tasks.max should be passed through to underlying Connectors.");
-        assertEquals(Collections.singletonList("topic-1"), sourceConfig.getList("topics"),
+        assertEquals(List.of("topic-1"), sourceConfig.getList("topics"),
             "Topics include should be passed through to underlying Connectors.");
-        assertEquals(Collections.singletonList("property-3"), sourceConfig.getList("config.properties.exclude"),
+        assertEquals(List.of("property-3"), sourceConfig.getList("config.properties.exclude"),
                 "Config properties exclude should be passed through to underlying Connectors.");
-        assertEquals(Collections.singletonList("FakeMetricsReporter"), sourceConfig.getList("metric.reporters"),
+        assertEquals(List.of("FakeMetricsReporter"), sourceConfig.getList("metric.reporters"),
                 "Metrics reporters should be passed through to underlying Connectors.");
         assertEquals("DefaultTopicFilter", sourceConfig.getClass("topic.filter.class").getSimpleName(),
                 "Filters should be passed through to underlying Connectors.");
@@ -166,7 +164,7 @@ public class MirrorMakerConfigTest {
                 "Unknown properties should not be passed through to Connectors.");
 
         MirrorCheckpointConfig checkpointConfig = new MirrorCheckpointConfig(connectorProps);
-        assertEquals(Collections.singletonList("group-2"), checkpointConfig.getList("groups"),
+        assertEquals(List.of("group-2"), checkpointConfig.getList("groups"),
             "Groups include should be passed through to underlying Connectors.");
 
     }
@@ -182,9 +180,9 @@ public class MirrorMakerConfigTest {
             MirrorSourceConnector.class);
         DefaultTopicFilter.TopicFilterConfig filterConfig = 
             new DefaultTopicFilter.TopicFilterConfig(connectorProps);
-        assertEquals(Arrays.asList("topic1", "topic2"), filterConfig.getList("topics"),
+        assertEquals(List.of("topic1", "topic2"), filterConfig.getList("topics"),
             "source->target.topics should be passed through to TopicFilters.");
-        assertEquals(Collections.singletonList("topic3"), filterConfig.getList("topics.exclude"),
+        assertEquals(List.of("topic3"), filterConfig.getList("topics.exclude"),
             "source->target.topics.exclude should be passed through to TopicFilters.");
     }
 
@@ -367,7 +365,7 @@ public class MirrorMakerConfigTest {
 
     public static class FakeConfigProvider implements ConfigProvider {
 
-        Map<String, String> secrets = Collections.singletonMap("password", "secret2");
+        Map<String, String> secrets = Map.of("password", "secret2");
 
         @Override
         public void configure(Map<String, ?> props) {
